src/creator.scss
/* ... */
[class^="icon-"], [class*=" icon-"] {
	font-family: 'icomoon';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	margin-right: 8px;
	cursor: pointer;
}

.icon-print {
	&:before {
		content: "\e954";
		position: relative;
		float: right;
		margin: 20px 74px;
		opacity: 0.5;
	}
	&:hover:before{
		opacity: 1;
	}
}

.icon-spinner:before {
	content: "\e984";
}
.icon-close {
	opacity: 0.3;
	text-align: center;
	padding: 0px;
	margin: 0px;
	display: inline-block;
	width: 100%;
	height: 45px;
	padding-top: 15px;
	box-sizing: border-box;

	&:hover {
		opacity: 1;
	}
	&:before {
		content: "\ea0f";
	}
}
.icon-plus:before {
	content: "\ea0a";
}

#backgroundcover {
	position: fixed;
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	background: #000;
	z-index: -1;
	opacity: 0;
	transition: all 0.5s ease;
	&.show {
		z-index: 2000;
		opacity: 0.5;
		transition: opacity 0.5s ease;
	}
}

.box {
	width: 635px;
	left: 50%;
	top: 50%;
	margin-left: -317px;
	margin-top: -210px;
	padding: 15px;
	position: fixed;
	background: #fff;
	border: solid 1px #777;
	z-index: -1;
	opacity: 0;
	transition: all 0.5s ease;

	text-align: left;
	font-weight: 300;
	font-size: 17px;

	box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
	color: #333;

	img {
		float: right;
		margin-left: 70px;
		margin-top: 5px;
		margin-right: 5px;
	}

	h1 {
		font-size: 30px;
		font-weight: 300;
		color: #333;
		margin: 5px 0px;
	}
	p {
		margin: 24px 0px;
	}
	hr {
		border: none;
		border-bottom: solid 1px #eee;
		margin: 40px 20px;
	}

	&.show {
		z-index: 10000;
		opacity: 1;
	}

	input {
		margin-top: 20px;
		padding: 12px;
		width: 150px;
		background: $green;
		margin-left: 4px;
		color: #fff;
		border: none;
		vertical-align: baseline;
		font-size: 18px;
		font-family: 'Lato';
		font-weight: 300;
		outline: none;

		&[type=text] {
			width: 450px;
			margin-top: 20px;
			border: solid 1px #333;
			font-size: 16px;
			color: #333;
			background: #fff;
			border: solid 2px #70bd34;
			padding: 11px;
			margin-left: 0px;
		}
		&[type=button]:hover, &[type=submit]:hover {
			background: #78DD5E;
			color: #000;
			cursor: pointer;
		}
	}
}

.options {
	width: 500px;
	left: 50%;
	margin-left: -250px;

	input {
		&[type=text] {
			width: 25px;
			padding: 5px 7px;
			border: 1px solid #ccc;
			font-weight: 600;
			font-size: 20px;
			margin: 4px;
			&:hover{
				background: #F7FAB3;
			}
		}
		&[type=button] {
			position: relative;
			left: 35%;
		}
	}
	strong {
		margin-right: 30px;
	}
}

.question_tip {
	position: absolute;
	right: 17px;
	top: 16px;
	padding: 8px;
	border: 2px solid #999;
	border-radius: 50px;
	width: 18px;
	text-align: center;
	opacity: 0.5;
	z-index: 5;

	cursor: pointer;

	font-family: 'Lato';

	transition: all 0.15s ease;

	&:hover {
		opacity: 1;
		border: 4px solid #53a1d1;
		margin: -2px;

		.qtip_box {
			z-index: 999;
			opacity: 1;
			overflow: inherit;
			height: auto;
			width: 255px;
		}
	}

	.qtip_box {
		position: absolute;
		background: #53a1d1;
		border: 2px solid #53a1d1;
		z-index: -5;
		opacity: 0;
		font-size: 14px;
		color: #fff;
		text-align: left;
		height: 0px;
		width: 0px;
		overflow: hidden;
		top: 55px;
		right: -3px;
		padding: 0px 8px;
		font-weight: 300;

		border-radius: 5px;

		b {
			font-weight: 400;
		}

	}

	.qtip_box:after, .qtip_box:before {
		bottom: 100%;
		left: 93.5%;
		border: solid transparent;
		content: " ";
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
	}

	.qtip_box:after {
		border-color: rgba(83, 161, 209, 0);
		border-bottom-color: #53a1d1;
		border-width: 10px;
		margin-left: -10px;
	}

	.qtip_box:before {
		border-color: rgba(58, 29, 1, 0);
		border-bottom-color: #53a1d1;
		border-width: 13px;
		margin-left: -13px;
	}

}

hr {
	border: none;
	border-bottom: solid 1px #ccc;
}

.add {
	width: calc(100% - 650px);
	padding: 16px 0px;
	border-bottom: solid 1px #ddd;
	background: #f0f8ec;

	cursor: pointer;

	color: $green;
	font-size: 13px;

	text-align: center;

	div {
		display: block;
		width: 25px;
		height: 25px;
		padding: 12px;
		border-radius: 60px;
		color: #fff;
		font-size: 22px;
		background: $green;
		margin: 10px auto;
	}
	&:hover{
		background: #F7FAB3;
		div {
			background: #78DD5E;
			color:#000;
		}
	}
}

#specialInput {
	position: fixed;
	left: 10px;
	bottom: 0px;
	z-index: 100;

	transition: height 1s, transform 1s, ease;
	-webkit-transition: height 1s, -webkit-transform 1s, ease;
	-moz-transition: height 1s, -moz-transform 1s, ease;
}

#specialInputHead {
	cursor: pointer;
	color: #ffffff;
	width: 180px;
	height: 25px;
	padding: 0 5px;
	margin: 0;
	font-size: 16px;
	background-color: #333333;
}

#specialInputBody {
	box-sizing: border-box;
	margin: 0;
	padding: 5px;
	background-color: #333333;
	white-space: nowrap;

	overflow-x: auto;
	overflow-y: hidden;

	span {
		cursor: pointer;
		display: inline-block;
		font-size: 18px;
		background-color: #fff;
		padding: 5px;
	}

	span:hover {
		background-color: #AEC4FF;
	}
}

#specialInput.up {
	overflow-x: auto;
	overflow-y: hidden;
	height: 73px;
}

#specialInput.down {
	overflow: hidden;
	height: 28px;
}

#specialInput.down > #specialInputHead::after, #specialInput.up > #specialInputHead::after {
	font-size: 18px;
	display: inline-block;
	position: relative;
	left: 20px;
	color: #ffffff;
}
#specialInput.up > #specialInputHead::after {
	content: '-';
}
#specialInput.down > #specialInputHead::after {
	content: '+';
}

.loading {
	position: absolute;
	padding-top: 200px;
	padding-left: 44%;
	font-size: 13px;
	font-weight: 700;
	top: 0px;
	bottom: 0px;
	right: 0px;
	left: 0px;
	background: rgba(0,0,0,0.1);
	display: none;
}
/* ... */

